# python-project-52

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  build.sh  build1.sh  docker-compose.yaml  pyproject.toml  requirements.txt  requrements.txt  ruff.toml  setup.cfg
.github/workflows/: check.yml
task_manager/: __init__.py  base_class.py  mixin.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru_RU/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_description_and_more.py  0003_alter_task_description_alter_task_executor_and_more.py  0004_alter_task_executor.py
task_manager/templates/: base.html  delete.html  forms.html  index.html
task_manager/templates/labels/: labels.html  list_labels.html
task_manager/templates/statuses/: status.html  statuses.html
task_manager/templates/tasks/: task.html  task_detail.html  tasks.html
task_manager/templates/users/: users.html
task_manager/users/: admin.py  forms.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
