[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
readme = "README.md"
packages = [
  { include = "task_manager" },
]
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.5",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "ruff>=0.9.2",
]
