[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["MaksimGoryachev <m.goryachev2011@yandex.ru>"]
readme = "README.md"
packages = [
  { include = "task_manager" },
]
requires-python = ">= 3.12.3"

dependencies = [
    "dj-database-url>=2.3.0",
    "django==5.1.5",
    "django-bootstrap5>=24.3",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "rollbar>=1.2.0",
    "uvicorn>=0.34.0",
    "whitenoise[brotli]>=6.8.2",
]

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "flake8>=7.1.1",
    "pytest-django>=4.10.0",
    "ruff>=0.9.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
